--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="E:/jgraphx-master/lib/jgraphx.jar" sourcepath="E:/jgraphx-master/src">
-		<attributes>
-			<attribute name="source_encoding" value="UTF-8"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="D:/myeclipseFiles/jgraphx-master/lib/jgraphx.jar" sourcepath="E:/jgraphx-master/src"/>
+	<classpathentry kind="lib" path="D:/myeclipseFiles/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
